src/client/components/footer/footer.styl
.main-footer
  background var(--main)
  height 36px
  position absolute
  left 44px
  right 0
  bottom 0
  z-index 200
.pinned
  .main-footer
  .qm-wrap-tooltip
    left 343px

.terminal-footer-flex
  display flex
  .terminal-footer-unit .ant-select-selector .ant-select-selection-placeholder
    line-height 24px
.terminal-footer-unit
  margin-left 10px
  line-height 39px
  textarea.ant-input
    min-height 26px
    height 26px
    margin-bottom -2px
    resize none
    &::-webkit-scrollbar
      width 0

.terminal-footer-center
  flex-grow 1
.terminal-footer-info
  margin-right 10px
  line-height 39px
.batch-input-outer
  .bi-full
    display none
  &.bi-show
    line-height 20px
    .bi-full
      display inline
    .bi-compact
      display none
.batch-input-holder
  width 100px
@media (max-width: 500px)
  .batch-input-outer
    &.bi-show
      position fixed
      left 100px
      right 0
      bottom 0
      z-index 100
      background var(--main)

